--- a/package.json
+++ b/package.json
@@ -9,12 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ai-sdk/anthropic": "^1.1.12",
+    "@ai-sdk/google": "^1.1.17",
+    "@ai-sdk/react": "^1.1.18",
     "@clerk/nextjs": "^6.12.0",
+    "@google/generative-ai": "^0.22.0",
+    "@opentelemetry/api": "^1.9.0",
     "@radix-ui/react-progress": "^1.1.2",
     "@radix-ui/react-slot": "^1.1.2",
     "@schematichq/schematic-components": "^0.4.7",
     "@schematichq/schematic-react": "^1.2.3",
     "@schematichq/schematic-typescript-node": "^1.1.9",
+    "ai": "^4.1.46",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "convex": "^1.19.3",
